# SapphireLibs

./: .gitignore  .gitmodules  README.md
sapphire/datReader/: CMakeLists.txt  Dat.cpp  Dat.h  DatCat.cpp  DatCat.h  Exd.cpp  Exd.h  ExdCat.cpp  ExdCat.h  ExdData.cpp  ExdData.h  Exh.cpp  Exh.h  File.cpp  File.h  GameData.cpp  GameData.h  Index.cpp  Index.h  Makefile  SqPack.cpp  SqPack.h  bparse.h  cbasetypes.h  cmake_install.cmake  conv.cpp  conv.h  crc32.h  stream.cpp  stream.h  xivdat.vcxproj  zlib.h
sapphire/mysqlConnector/: CMakeLists.txt  Connection.cpp  Connection.h  MySqlBase.cpp  MySqlBase.h  MySqlConnector.h  PreparedResultSet.cpp  PreparedResultSet.h  PreparedStatement.cpp  PreparedStatement.h  ResultBind.cpp  ResultBind.h  ResultSet.cpp  ResultSet.h  Statement.cpp  Statement.h  mysqlConnector.vcxproj  mysql_util.cpp  mysql_util.h
